--- a/argocd/bytestash/secrets.yaml
+++ b/argocd/bytestash/secrets.yaml
@@ -4,7 +4,7 @@ metadata:
     name: bytestash-secrets
 type: Opaque
 data:
-    TOKEN_EXPIRY: ENC[AES256_GCM,data:iLt+QZsjmfY=,iv:eFkEBbm5VAGSQJv7eUqsq2IvO7DK32X1cU3z6LzB3ww=,tag:K/VMDih2/UqXWo3EEx/zpA==,type:str]
+    TOKEN_EXPIRY: ENC[AES256_GCM,data:fpU+HiGRPo4=,iv:PFbjVBKjUyTgV9YFfrojMJwqzi5TbIGneGUqFtCfSZA=,tag:VORFZDV2SrHdk9fy9b+/+g==,type:str]
     JWT_SECRET: ENC[AES256_GCM,data:SFwoum0hC7tW7nzikmGOh9Tq2bKdORhFULb5XAk9hY5gMbKxbtPIIeT0TQo=,iv:VxpJMgaLC5ndkoctnTedWmsUw4D6kmVTfJphp0VC4Qs=,tag:na1M2dQ5drcxqzNHhthRmQ==,type:str]
 sops:
     age:
@@ -17,7 +17,7 @@ sops:
             SnFSUHVQUlZIQjYyWmd4dis5ZFIwbmcK0Z6G7noV+pf0ZauT31yH95EpO4c/E/yk
             vbeJDjJCgZmJbtxZFReWkNGIw0kB/Z1b3xJBaRDl5uaxQ1u1UjToiw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-07-29T14:06:32Z"
-    mac: ENC[AES256_GCM,data:9kdYlREYExKxD88OTJeUEsjhfsTJ2Gf8oPHxcBBNQs3uYRdTGpC5sR3k3tOjwgCPNS4zpb+WLykcZyM+g7OgElr3+DBHvbrXUiMZetdKQA5mDnIZivdhkMovRXhIyoVczFsQVGdT9kx1ivkx7waynQOSkJ1rjqsbYTt1BCcwxxY=,iv:fjgCzRrs4OjxZiQSGN6oSYnPgCkjfMbCCdkxlpHxD4Q=,tag:JOcte0/TfIBouIcnI6pl7Q==,type:str]
+    lastmodified: "2025-07-29T14:08:22Z"
+    mac: ENC[AES256_GCM,data:ivLKFvk8QybB4sYv6Zm+hmcxTmp+Irxh0V+J1N1uNQf5V2JWg7nz9Vu8IvuJ4MZCqHVf+yKMPlYaYLXDW+oLMAFREmUFnAPZ9Z3Lbb6bBVhIYIkbkIitLLPkyxHyymvJrdnXcolcBUasS96/GtI0nwlcfZC/xW2RFf6uwDQL7v8=,iv:G4s54jWe0RH40/RQkeAjjEIb9l5lUdgtvpmEm7xJsjg=,tag:sTjn3+KYEXaN5F/fK0bmHQ==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.10.2
