--- a/argocd/bytestash/secrets.yaml
+++ b/argocd/bytestash/secrets.yaml
@@ -4,7 +4,7 @@ metadata:
     name: bytestash-secrets
 type: Opaque
 data:
-    TOKEN_EXPIRY: ENC[AES256_GCM,data:fpU+HiGRPo4=,iv:PFbjVBKjUyTgV9YFfrojMJwqzi5TbIGneGUqFtCfSZA=,tag:VORFZDV2SrHdk9fy9b+/+g==,type:str]
+    TOKEN_EXPIRY: ENC[AES256_GCM,data:NY3nqovymXA=,iv:8hwt+WczKyM6HaA4ZR2vgf1JXlXJLNz0HMGZQBqh7SE=,tag:dt3YtgE9/hfSVQF5GPMzFQ==,type:str]
     JWT_SECRET: ENC[AES256_GCM,data:SFwoum0hC7tW7nzikmGOh9Tq2bKdORhFULb5XAk9hY5gMbKxbtPIIeT0TQo=,iv:VxpJMgaLC5ndkoctnTedWmsUw4D6kmVTfJphp0VC4Qs=,tag:na1M2dQ5drcxqzNHhthRmQ==,type:str]
 sops:
     age:
@@ -17,7 +17,7 @@ sops:
             SnFSUHVQUlZIQjYyWmd4dis5ZFIwbmcK0Z6G7noV+pf0ZauT31yH95EpO4c/E/yk
             vbeJDjJCgZmJbtxZFReWkNGIw0kB/Z1b3xJBaRDl5uaxQ1u1UjToiw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-07-29T14:08:22Z"
-    mac: ENC[AES256_GCM,data:ivLKFvk8QybB4sYv6Zm+hmcxTmp+Irxh0V+J1N1uNQf5V2JWg7nz9Vu8IvuJ4MZCqHVf+yKMPlYaYLXDW+oLMAFREmUFnAPZ9Z3Lbb6bBVhIYIkbkIitLLPkyxHyymvJrdnXcolcBUasS96/GtI0nwlcfZC/xW2RFf6uwDQL7v8=,iv:G4s54jWe0RH40/RQkeAjjEIb9l5lUdgtvpmEm7xJsjg=,tag:sTjn3+KYEXaN5F/fK0bmHQ==,type:str]
+    lastmodified: "2025-07-29T14:10:12Z"
+    mac: ENC[AES256_GCM,data:TQAvBB2CB9R8kGGHdxxRUYXSYSrsTkRlV14ZEOBUmV31hPA37O/uDm6RRvWsonHkwMnJh1sgp8SisE7ZbxupkqrXbjq2QtFLlpfjC9tVvi7V7WexxpxthR36wvkKJV8PlbH94r9Yskhk97MS/BZJCVxM1XH+Ywyni2nmwNk/PXg=,iv:lAPocvHj6t6EGIbBIcEqJn4WTQrt4L4ytf/JKiILj28=,tag:AiMUHTC55l2J4mZWb92gKQ==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.10.2
