--- a/talos/cert-manager/manifests/resources.yaml
+++ b/talos/cert-manager/manifests/resources.yaml
@@ -1,3 +1,33 @@
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: local-root-ca-issuer-selfsigned
+spec:
+  selfSigned: {}
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: local-root-ca
+  namespace: cert-manager
+spec:
+  isCA: true
+  commonName: local-root-ca
+  secretName: local-root-ca-secret
+  duration: 87600h # 10 years
+  renewBefore: 78840h # 9 years
+  privateKey:
+    algorithm: ECDSA
+    size: 256
+  issuerRef:
+    name: local-root-ca-issuer-selfsigned
+    kind: ClusterIssuer
+    group: cert-manager.io
+  nameConstraints:
+    critical: true
+    permitted:
+      dnsDomains:
+        - t.yanello.net
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
