--- a/argocd/infra/nvidia-operator/values.yaml
+++ b/argocd/infra/nvidia-operator/values.yaml
@@ -2,13 +2,23 @@ driver:
   enabled: false
 toolkit:
   enabled: false
-  
+
 devicePlugin:
   config:
     name: time-slicing-config-all
-    
+
 daemonsets:
   tolerations:
     - key: "node-role.kubernetes.io/control-plane"
       operator: "Exists"
       effect: "NoSchedule"
+
+operator:
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          matchExpressions:
+            - key: "gpu.type"
+              operator: In
+              values: ["nvidia"]
