--- a/argocd/tube-archivist/kustomization.yaml
+++ b/argocd/tube-archivist/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ./manifests/cm.yaml
   - ./manifests/sts.yaml
+  - ./manifests/svc.yaml
 
 generators:
   - manifests/secret-generator.yaml
