--- a/argocd/tube-archivist/kustomization.yaml
+++ b/argocd/tube-archivist/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ./manifests/cm.yaml
   - ./manifests/sts.yaml
   - ./manifests/svc.yaml
+  - ./manifests/http-route.yaml
 
 generators:
   - manifests/secret-generator.yaml
