--- a/argocd/media-server/unpackerr/manifests/deploy.yaml
+++ b/argocd/media-server/unpackerr/manifests/deploy.yaml
@@ -46,7 +46,7 @@ spec:
             - secretRef:
                 name: unpackerr-secrets
           image: golift/unpackerr:0.14.5@sha256:8493ffc2dd17e0b8a034552bb52d44e003fa457ee407da97ccc69328bce4a815
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           resources:
             limits:
               cpu: 100m
