use ghcr for dddev

--- a/argocd/dev/dollardollar-dev/manifests/deploy.yaml
+++ b/argocd/dev/dollardollar-dev/manifests/deploy.yaml
@@ -57,7 +57,7 @@ spec:
             # - MAIL_USERNAME=${MAIL_USERNAME}
             # - MAIL_PASSWORD=${MAIL_PASSWORD}
             # - MAIL_DEFAULT_SENDER=${MAIL_DEFAULT_SENDER}
-          image: gitea.yanello.net/marcus/dollardollar:latest
+          image: ghcr.io/myanello/dollardollar:latest
           imagePullPolicy: Always
           name: dollardollar-dev
           ports:
