add some ignores to the argo differ

--- a/.github/workflows/argo-diff.yaml
+++ b/.github/workflows/argo-diff.yaml
@@ -134,7 +134,8 @@ jobs:
             -v $(pwd)/values.yaml:/argocd-config/values.yaml \
             -e TARGET_BRANCH=refs/pull/${{ github.event.number }}/merge \
             -e REPO=${{ github.repository }} \
-            dagandersen/argocd-diff-preview:v0.1.10 --debug
+            dagandersen/argocd-diff-preview:v0.1.10 \
+            --diff-ignore="install_id|install_time|checksum|caBundle"
 
       - name: Post diff as comment
         run: |
