--- a/argocd/immich/manifests/deploy.yaml
+++ b/argocd/immich/manifests/deploy.yaml
@@ -113,7 +113,7 @@ spec:
                 name: immich-config
             - secretRef:
                 name: immich-secrets
-          image: ghcr.io/immich-app/immich-machine-learning:v1.138.0-cuda@sha256:5451885207f1b4146a83b845c1046bbeb99a9a17d4d72da1dc340d8c1afd7ef5
+          image: ghcr.io/immich-app/immich-machine-learning:v1.138.0-cuda
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: photos
