--- a/.github/workflows/argo-diff.yaml
+++ b/.github/workflows/argo-diff.yaml
@@ -135,7 +135,7 @@ jobs:
             -e TARGET_BRANCH=refs/pull/${{ github.event.number }}/merge \
             -e REPO=${{ github.repository }} \
             dagandersen/argocd-diff-preview:v0.1.10 \
-            --diff-ignore="checksum|caBundle"
+            --diff-ignore="checksum|caBundle|helm\.sh\/chart|version"
 
       - name: Post diff as comment
         run: |
