--- a/argocd/media-server/qbittorrent/manifests/deploy.yaml
+++ b/argocd/media-server/qbittorrent/manifests/deploy.yaml
@@ -104,10 +104,12 @@ spec:
               value: "on"
             - name: VPN_PORT_FORWARDING_PROVIDER
               value: protonvpn
+            - name: PORT_FORWARD_ONLY
+              value: "on"
             - name: FIREWALL_DEBUG
               value: "on"
-          # - name: VPN_PORT_FORWARDING_UP_COMMAND
-          #   value: /bin/sh -c 'wget -O- --retry-connrefused --post-data "json={\"listen_port\":{{PORTS}}}" http://qbittorrent:8080/api/v2/app/setPreferences 2>&1'
+            - name: VPN_PORT_FORWARDING_UP_COMMAND
+              value: /bin/sh -c 'wget -O- --retry-connrefused --post-data "json={\"listen_port\":{{PORTS}}}" http://qbittorrent:8080/api/v2/app/setPreferences 2>&1'
           # - name: DNS_KEEP_NAMESERVER
           #   value: "on"
           securityContext:
