--- a/argocd/infra/app-set.yaml
+++ b/argocd/infra/app-set.yaml
@@ -23,6 +23,7 @@ spec:
           selfHeal: true
         syncOptions:
           - CreateNamespace=true
+          - ServerSideApply=true
         managedNamespaceMetadata:
           labels:
             istio-injection: disabled
