fix cluster name

--- a/argocd/dev/bank-app/application.yaml
+++ b/argocd/dev/bank-app/application.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: main   
     path: deployment
   destination:
-    server: in-cluster
+    name: in-cluster
     namespace: bank-app
   syncPolicy:
     automated:
