--- a/argocd/infra/backrest/http-route.yaml
+++ b/argocd/infra/backrest/http-route.yaml
@@ -27,3 +27,8 @@ spec:
           name: backrest
           namespace: backrest
           port: 9898
+          weight: 1
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
