--- a/argocd/infra/cilium/manifests/bgp.yaml
+++ b/argocd/infra/cilium/manifests/bgp.yaml
@@ -21,6 +21,8 @@ spec:
           gracefulRestart:
             enabled: true
             restartTimeSeconds: 12
+      serviceAdvertisements:
+        - LoadBalancerIP
 ---
 apiVersion: "cilium.io/v2alpha1"
 kind: CiliumLoadBalancerIPPool
