--- a/argocd/infra/cilium/manifests/publicGateway.yaml
+++ b/argocd/infra/cilium/manifests/publicGateway.yaml
@@ -43,11 +43,11 @@ spec:
         mode: Terminate
         certificateRefs:
           - name: cilium-public
+            group: ""
+            kind: Secret
       allowedRoutes:
         namespaces:
           from: All
-        # kinds:
-        #   - kind: HTTPRoute
     - name: https-root
       protocol: HTTPS
       hostname: "yanello.net"
@@ -56,11 +56,11 @@ spec:
         mode: Terminate
         certificateRefs:
           - name: cilium-public
+            group: ""
+            kind: Secret
       allowedRoutes:
         namespaces:
           from: All
-        # kinds:
-        #   - kind: HTTPRoute
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
