--- a/argocd/infra/cilium/external/homeassistant.yaml
+++ b/argocd/infra/cilium/external/homeassistant.yaml
@@ -9,9 +9,13 @@ spec:
     - homeassistant.yanello.net
   parentRefs:
     - name: cilium-private-gateway
+      group: gateway.networking.k8s.io
+      kind: Gateway
       namespace: cilium
       sectionName: https
     - name: cilium-public-gateway
+      group: gateway.networking.k8s.io
+      kind: Gateway
       namespace: cilium
       sectionName: https
   rules:
