--- a/argocd/infra/cilium/external/pikvm.yaml
+++ b/argocd/infra/cilium/external/pikvm.yaml
@@ -9,6 +9,8 @@ spec:
     - pikvm.yanello.net
   parentRefs:
     - name: cilium-private-gateway
+      group: gateway.networking.k8s.io
+      kind: Gateway
       namespace: cilium
       sectionName: https
   rules:
