--- a/argocd/infra/cilium/external/router.yaml
+++ b/argocd/infra/cilium/external/router.yaml
@@ -10,6 +10,8 @@ spec:
     - router.yanello.net
   parentRefs:
     - name: cilium-private-gateway
+      group: gateway.networking.k8s.io
+      kind: Gateway
       namespace: cilium
       sectionName: https
   rules:
