--- a/argocd/infra/cilium/external/homeassistant.yaml
+++ b/argocd/infra/cilium/external/homeassistant.yaml
@@ -21,6 +21,7 @@ spec:
   rules:
     - backendRefs:
         - name: homeassistant-service
+          group: ""
           kind: Service
           port: 8123
 ---
