--- a/argocd/infra/cilium/external/ntopng.yaml
+++ b/argocd/infra/cilium/external/ntopng.yaml
@@ -16,6 +16,7 @@ spec:
   rules:
     - backendRefs:
         - name: ntopng-service
+          group: ""
           kind: Service
           port: 30341
 ---
