--- a/argocd/infra/cilium/external/ubiquiti.yaml
+++ b/argocd/infra/cilium/external/ubiquiti.yaml
@@ -16,6 +16,7 @@ spec:
   rules:
     - backendRefs:
         - name: ubiquiti-service
+          group: ""
           kind: Service
           port: 8880
 ---
