--- a/argocd/infra/cilium/external/iotawatt.yaml
+++ b/argocd/infra/cilium/external/iotawatt.yaml
@@ -16,6 +16,7 @@ spec:
   rules:
     - backendRefs:
         - name: iotawatt-service
+          group: ""
           kind: Service
           port: 80
 ---
