--- a/argocd/infra/cilium/external/homeassistant.yaml
+++ b/argocd/infra/cilium/external/homeassistant.yaml
@@ -24,6 +24,11 @@ spec:
           group: ""
           kind: Service
           port: 8123
+          weight: 1
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
 ---
 apiVersion: v1
 kind: Service
