--- a/argocd/infra/cilium/external/router.yaml
+++ b/argocd/infra/cilium/external/router.yaml
@@ -20,6 +20,11 @@ spec:
           group: ""
           kind: Service
           port: 1000
+          weight: 1
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
 ---
 apiVersion: v1
 kind: Service
