--- a/argocd/infra/cilium/external/ubiquiti.yaml
+++ b/argocd/infra/cilium/external/ubiquiti.yaml
@@ -19,6 +19,11 @@ spec:
           group: ""
           kind: Service
           port: 8880
+          weight: 1
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
 ---
 apiVersion: v1
 kind: Service
