--- a/argocd/infra/cilium/manifests/publicGateway.yaml
+++ b/argocd/infra/cilium/manifests/publicGateway.yaml
@@ -69,6 +69,8 @@ metadata:
 spec:
   parentRefs:
     - name: cilium-public-gateway
+      group: gateway.networking.k8s.io
+      kind: Gateway
       sectionName: http
   hostnames:
     - "*.yanello.net"
@@ -79,3 +81,8 @@ spec:
           requestRedirect:
             scheme: https
             statusCode: 301
+          weight: 1
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
