add matches to redirects

--- a/argocd/infra/cilium/manifests/publicGateway.yaml
+++ b/argocd/infra/cilium/manifests/publicGateway.yaml
@@ -81,3 +81,7 @@ spec:
           requestRedirect:
             scheme: https
             statusCode: 301
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
