--- a/argocd/infra/cilium/manifests/privateGateway.yaml
+++ b/argocd/infra/cilium/manifests/privateGateway.yaml
@@ -96,4 +96,7 @@ spec:
           requestRedirect:
             scheme: https
             statusCode: 301
-
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
